# SF-server

./: CMakeLists.txt  cmake.cmd  config.in
Common/: CMakeLists.txt  Common.h  qt_includes.h  stl_includes.h  version_global.h
Core/: CMakeLists.txt  CloseHandler.cpp  CloseHandler.h  Common.h  Core.cpp  Core.h  Settings.cpp  Settings.h  Version.h
Network/: CMakeLists.txt  RequestsManager.cpp  RequestsManager.h  Version.h
Network/Connection/: Connection.cpp  Connection.h
Network/Packet/: Packet.cpp  Packet.h
Network/RequestsManager/: RequestsManager.cpp  RequestsManager.h
Network/Server/: Server.cpp  Server.h
Network/Types/: Request.cpp  Request.h  Response.cpp  Response.h
SF-Server/: CMakeLists.txt  Common.h  Version.h  main.cpp
Types/: CMakeLists.txt  MetaTypeRegistration.h  Singleton.h  Version.h  pch.cpp
cmake/: custom-tools.cmake
cmake/templates/: config.in
